npm composer update

--- a/public/web.config
+++ b/public/web.config
@@ -22,11 +22,26 @@
           </conditions>
           <action type="Rewrite" url="index.php" />
         </rule>
+                <rule name="redirect https" stopProcessing="true">
+                    <match url="(.*)" />
+                    <conditions>
+                        <add input="{HTTPS}" pattern="^OFF$ " />
+                    </conditions>
+                    <action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" />
+                </rule>
       </rules>
     </rewrite>
-        <handlers>
-            <remove name="PHP53_via_FastCGI" />
-            <remove name="PHP56_via_FastCGI1" />
-        </handlers>
+        <defaultDocument>
+            <files>
+                <clear />
+                <add value="index.php" />
+                <add value="Default.htm" />
+                <add value="Default.asp" />
+                <add value="index.htm" />
+                <add value="index.html" />
+                <add value="iisstart.htm" />
+            </files>
+        </defaultDocument>
+        <httpRedirect enabled="false" destination="https://dptoolkit.fcat" exactDestination="true" />
   </system.webServer>
 </configuration>
