--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "bootstrap": "^4.4.1",
         "bootstrap-material-design": "^4.1.2",
+        "serialize-javascript": "^2.1.1",
         "vue": "^2.6.10",
         "vue-router": "^3.1.3"
     }
